# kernel-workshop

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: bitcoinkernel_wrapper.h
cpp/src/: main.cpp
data/op_code/: block_frequencies.json.example
frontend/: README.md
frontend/public/: index.html
python/: README.md  pyproject.toml
python/src/common/: args.py  nm_patch.py  process.py
python/src/raw/: main.py  util.py
python/src/wrapped/: main.py
rust/: README.md
